# samplearchitect

./: .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPT.md  README.md  package-lock.json  package.json  test-integration.js
reference/: chromatic-template.json  ksp-template.ksp  parser-spec.md  setup-guide-template.txt
site/: index.html
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/css/: style.css
src/js/: app.js  audio.js  chat.js  dspreset-gen.js  exporter.js  keyboard.js  knob-asset.js  knob-gen.js  ksp-gen.js  layout-builder.js  mapper.js  parser.js  template.js  trimmer.js  wallpaper-gen.js
