[package]
name = "samplearchitect"
version = "1.0.0"
description = "SampleArchitect - Sample Instrument Builder"
authors = ["Evenant"]
edition = "2021"

[lib]
name = "samplearchitect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
